--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -29,6 +29,7 @@
             <td class="cell" *ngFor="let cell of row; let cellIndex = index">
               <div class="panel" *ngFor="let j of getRepeatList(cell.type[1])" [style.height]="100/cell.type[1] + '%'">
                 <div class="pull-left area" *ngFor="let i of getRepeatList(cell.type[0])" [style.width]="100/cell.type[0] + '%'" [style.height]="'100%'">
+                  <div class="colored-bottom" [style.backgroundColor]="getColor(rowIndex, cellIndex)"></div>
                   <div class="product" *ngIf="cell.content">
                     <img [hidden]="!cell.content[j][i]" [src]="cell.content[j][i]" [class.horizontal]="cell.type[0] >= cell.type[1]" [class.vertical]="cell.type[0] < cell.type[1]"/>
                   </div>
