--- a/src/app/pages/shop/shop.component.scss
+++ b/src/app/pages/shop/shop.component.scss
@@ -58,8 +58,16 @@ a.home {
               }
               .area {
                 border-right: 1px solid #000;
+                position: relative;
                 &:last-child {
                   border-right: 0;
+                }
+                .colored-bottom {
+                  position: absolute;
+                  height: 10px;
+                  width: 100%;
+                  bottom: 0;
+                  z-index: 1;
                 }
                 .product {
                   display: -webkit-inline-flex;
