--- a/src/app/components/cabinetTemplate/cabinetTemplate.component.html
+++ b/src/app/components/cabinetTemplate/cabinetTemplate.component.html
@@ -11,7 +11,7 @@
         <div class="col-sm-6">
           <div class="input-group flex-vertical-center">
             <span class="mr-1">Cabinet Length</span>
-            <input type="number" min="1" max="10" class="form-control col-sm-6" placeholder="length" [(ngModel)]="cabinetLength"/>
+            <input type="number" min="1" max="10" class="form-control col-sm-6" placeholder="length" [(ngModel)]="cabinetLength" (ngModelChange)="changeLength()"/>
             <span class="ml-1">m</span>
           </div>
         </div>
@@ -32,15 +32,9 @@
       <div class="card" (click)="selectTemplate(template)" [class.active]="selectedTemp == template">
         <div class="card-block">
           <h6 class="text-muted text-uppercase mb-1">{{template.name}}</h6>
-          <table class="template" border="2">
-            <tr class="cells" *ngFor="let row of template.data">
-              <td class="cell" *ngFor="let cell of row">
-                <div class="panel" *ngFor="let j of getRepeatList(cell.type[1])" [style.height]="100/cell.type[1] + '%'">
-                  <div class="pull-left area" *ngFor="let i of getRepeatList(cell.type[0])" [style.width]="100/cell.type[0] + '%'" [style.height]="'100%'"></div>
-                </div>
-              </td>
-            </tr>
-          </table>
+          <div class="text-center temp-layer">
+            <template-drawer [data]="template.data" size="small"></template-drawer>
+          </div>
         </div>
       </div>
     </div>
@@ -52,21 +46,7 @@
       <h4 class="title thin-word-2">Customize your cabinet</h4>
       <h5 class="sub-title thin-word-2 text-muted mb-3">Add elements or create subdivisions</h5>
       <div class="text-center temp-layer">
-        <div class="template" border="3">
-          <div class="cells" *ngFor="let row of selectedTemp.data; let rowIndex = index">
-            <div class="cell" *ngFor="let cell of row; let cellIndex = index" data-toggle="modal" (click)="showCellModal(cell, rowIndex, cellIndex)">
-              <table class="cell-chart">
-                <tr *ngFor="let i of [0, 1, 2]">
-                  <td *ngFor="let j of [0, 1, 2]" class="small" [class.selected]="j < cell.type[0] && i < cell.type[1]"></td>
-                </tr>
-              </table>
-              <div class="panel" *ngFor="let j of getRepeatList(cell.type[1])" [style.height]="100/cell.type[1] + '%'">
-                <div class="pull-left area" *ngFor="let i of getRepeatList(cell.type[0])" [style.width]="100/cell.type[0] + '%'" [style.height]="'100%'"></div>
-              </div>
-            </div>
-            <a class="last-add-btn" href="javascript:void(0)" (click)="addNewCellInRow(rowIndex)"><i class="fa fa-plus"></i></a>
-          </div>
-        </div>
+        <template-drawer [data]="selectedTemp.data" size="large" tempMode="editable" (onCellClick)="showCellModal($event)" (onAddColumn)="addNewCellInRow()"></template-drawer>
       </div>
 
       <div class="bottom-bar pr-1 pl-1">
