--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -24,7 +24,7 @@
       <h4 class="title thin-word-2">{{selectedCabinet.name}}</h4>
       <h6 class="sub-title thin-word-2 text-muted mb-3">Created on {{selectedCabinet.create_at}}</h6>
       <div class="text-center temp-layer">
-        <template-drawer [data]="selectedCabinet.template.data" size="large" tempMode="showContent" [cabinetLength]="selectedCabinet.length"></template-drawer>
+        <template-drawer [data]="selectedCabinet.template.data" size="large" tempMode="showContent" [cabinetLength]="selectedCabinet.length" [verticalUnit]="selectedCabinet.unit"></template-drawer>
       </div>
 
       <div class="bottom-bar pr-1 pl-1">
