--- a/src/app/components/productCollector/productCollector.component.html
+++ b/src/app/components/productCollector/productCollector.component.html
@@ -1,10 +1,15 @@
-<div class="header">
+<div class="header" [style.backgroundColor]="color">
   <div class="pull-left">
     <select class="form-control pull-left ml-2">
       <option>Top 10 products</option>
       <option>New products</option>
       <option>Baguettes and half baguettes</option>
       <option>Small rolls</option>
+      <option>Loaves</option>
+      <option>Danish</option>
+      <option>Donuts and muffins</option>
+      <option>Savory pastries</option>
+      <option>Pastry</option>
     </select>
   </div>
   <div class="pull-right">
