--- a/src/app/pages/create/create.component.scss
+++ b/src/app/pages/create/create.component.scss
@@ -13,14 +13,16 @@ label.form-control-label {
 }
 .links {
   a {
-    color: #666;
     text-decoration: none;
     position: relative;
-    &:first-child i {
-      position: absolute;
-      top: 0;
-      right: -25px;
-      z-index: 1;
+    &:first-child {
+      padding-right: 40px;
+      i {
+        position: absolute;
+        top: 5px;
+        right: 10px;
+        z-index: 1;
+      }
     }
   }
 }
