--- a/src/app/components/shoplist/shoplist.component.html
+++ b/src/app/components/shoplist/shoplist.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngIf="insertable == 1" class="col-sm-{{12/maxLine}} add-new">
+  <div *ngIf="insertable == 1" class="col-sm-{{12/maxLine}} add-new item">
     <div class="card" [ngClass]="cardType" routerLink="/create">
       <div class="card-block">
         <div class="text-center text-muted mb-2">
@@ -9,9 +9,9 @@
       </div>
     </div>
   </div>
-  <div *ngFor="let item of items" class="col-sm-{{12/maxLine}}">
+  <div *ngFor="let item of items" class="col-sm-{{12/maxLine}} item">
     <div class="card" [ngClass]="cardType" [routerLink]="['/shop', item.id]">
-      <img class="img-fluid" [src]="item.thumbnail"/>
+      <img class="img-fluid" [src]="item.logo"/>
       <div class="card-block">
         <h5>{{item.name}}</h5>
         <p class="text-muted">{{item.address}}<br>{{item.zipcode}} {{item.city}}</p>
