--- a/src/app/pages/create/create.component.html
+++ b/src/app/pages/create/create.component.html
@@ -2,7 +2,7 @@
   <div class="new-shop">
     <div class="header">
       <div class="title">
-        <h2 class="thin-word-1">Add a new shop</h2>
+        <h2 class="custom-title">Add a new shop</h2>
         <h5 class="text-muted thin-word-2">Complete the form below to add a new shop</h5>
       </div>
     </div>
