--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container pt-2">
   <div class="header">
     <div class="title pull-left">
-      <h2 class="thin-word-1">Select a shop below</h2>
+      <h2 class="custom-title">Select a shop below</h2>
       <h5 class="text-muted thin-word-2">or create a new one</h5>
     </div>
     <form class="form-horizontal pull-right mt-1">
