--- a/src/app/components/cabinetTemplate/cabinetTemplate.component.html
+++ b/src/app/components/cabinetTemplate/cabinetTemplate.component.html
@@ -3,7 +3,7 @@
   <a class="nav navbar-nav ml-auto home" routerLink="/"><i class="fa fa-home"></i></a>
 </header>
 <div class="container pt-2" [hidden]="step != 1">
-  <h4 class="title mb-1 thin-word-2">Create a cabinet</h4>
+  <h4 class="custom-title mb-1">Create a cabinet</h4>
   <h5 class="sub-title thin-word-2">Specifications</h5>
   <div class="card mb-2">
     <div class="card-block">
@@ -45,7 +45,7 @@
 <div class="container customize-panel" [hidden]="step != 2">
   <div class="card mb-0">
     <div class="card-block">
-      <h4 class="title thin-word-2">Customize your cabinet</h4>
+      <h4 class="custom-title">Customize your cabinet</h4>
       <h5 class="sub-title thin-word-2 text-muted mb-3">Add elements or create subdivisions</h5>
       <div class="text-center temp-layer">
         <template-drawer [data]="selectedTemp.data" size="large" tempMode="editable" [verticalUnit]="verticalUnit" (onCellClick)="showCellModal($event)" (onAddColumn)="addNewCellInRow()" (onAddRow)="addRow()"></template-drawer>
