--- a/src/app/components/productCollector/productCollector.component.html
+++ b/src/app/components/productCollector/productCollector.component.html
@@ -22,7 +22,8 @@
     </div>
   </div>
 </div>
-<div class="container mt-2">
+<div class="container mt-1">
+  <h2 class="custom-title">Fill your cabinet</h2>
   <div class="row">
     <div class="col-sm-8">
       <div class="row product-gallery">
