--- a/src/app/components/cabinetTemplate/cabinetTemplate.component.scss
+++ b/src/app/components/cabinetTemplate/cabinetTemplate.component.scss
@@ -1,7 +1,7 @@
 a.home {
   font-size: 22px;
   text-decoration: none;
-  color: darkblue;
+  color: #e08d39;
 }
 .flex-vertical-center {
   align-items: center;
@@ -22,7 +22,7 @@ a.home {
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: darkblue;
+      background-color: #e08d39;
 
       .select-another {
         height: 100%;
@@ -77,7 +77,7 @@ a.home {
       display: flex;
       -webkit-align-items: center;
       align-items: center;
-      color: darkblue;
+      color: #e08d39;
       font-size: 13px;
       text-decoration: none;
 
@@ -95,7 +95,7 @@ a.home {
       color: white;
       text-decoration: none;
       padding: 5px 10px;
-      background-color: darkblue;
+      background-color: #e08d39;
 
       i {
         font-size: 18px;
