--- a/src/app/pages/shop/shop.component.scss
+++ b/src/app/pages/shop/shop.component.scss
@@ -1,7 +1,7 @@
 a.home {
   font-size: 22px;
   text-decoration: none;
-  color: darkblue;
+  color: #e08d39;
 }
 .detail-panel {
   display: -webkit-flex;
@@ -44,7 +44,7 @@ a.home {
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: darkblue;
+      background-color: #e08d39;
 
       .new-configuration {
         height: 100%;
