--- a/src/app/components/cabinetConfiguration/cabinetConfiguration.component.html
+++ b/src/app/components/cabinetConfiguration/cabinetConfiguration.component.html
@@ -5,8 +5,9 @@
 <div class="container configuration-panel" (click)="reset()">
   <div class="card mb-0" [style.marginTop]="offsetPos + 'px'">
     <div class="card-block">
-      <div class="row header-layout mt-1">
+      <div class="row header-layout">
         <div class="col-sm-6">
+          <h2 class="custom-title">Fill your cabinet</h2>
           <input type="text" class="form-control" placeholder="Please insert cabinet name..." [(ngModel)]="cabinet.name"/>
         </div>
         <div class="col-sm-6">
@@ -15,7 +16,7 @@
         </div>
       </div>
 
-      <p class="mt-3 text-muted">Select a slot to change its contents</p>
+      <p class="mt-1 text-muted">Select a slot to change its contents</p>
       <div class="text-center temp-layer">
         <template-drawer [data]="cabinet.template.data" size="large" tempMode="showContent" assignable="true" [cabinetLength]="cabinet.length" [verticalUnit]="cabinet.unit" (onAddProduct)="assignProduct($event)"></template-drawer>
       </div>
