--- a/src/app/components/cabinetConfiguration/cabinetConfiguration.component.scss
+++ b/src/app/components/cabinetConfiguration/cabinetConfiguration.component.scss
@@ -2,7 +2,7 @@ header {
   a.home {
     font-size: 22px;
     text-decoration: none;
-    color: darkblue;
+    color: #e08d39;
   }
 }
 .configuration-panel {
@@ -39,7 +39,8 @@ header {
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: darkblue;
+      background-color: #e08d39;
+      z-index: 2;
 
       .cancel {
         display: -webkit-flex;
