--- a/src/app/components/productCollector/productCollector.component.html
+++ b/src/app/components/productCollector/productCollector.component.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 <div class="container mt-1">
-  <h2 class="custom-title">Fill your cabinet</h2>
+  <h2 class="custom-title">Select your product</h2>
   <div class="row">
     <div class="col-sm-8">
       <div class="row product-gallery">
